--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 copyright
 -->
 <head>
-	<title>Ashutosh</title>
+	<title>Ashutosh website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
